<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.android.androidsimulator.activities.MainActivity">

    <!-- ICONS FROM https://www.flaticon.com -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_messages"
            android:src="@drawable/messages"
            style="@style/iconsMainActivity" />

        <TextView
            android:id="@+id/messages_textView"
            android:layout_below="@id/img_messages"
            android:text="@string/app_messages"
            style="@style/textIconsMainActivity" />

        <ImageView
            android:id="@+id/img_contacts"
            android:src="@drawable/contacts"
            android:layout_toRightOf="@id/img_messages"
            style="@style/iconsMainActivity" />

        <TextView
            android:id="@+id/contacts_textView"
            android:layout_below="@id/img_contacts"
            android:layout_toRightOf="@id/messages_textView"
            android:text="@string/app_contacts"
            style="@style/textIconsMainActivity" />

        <ImageView
            android:id="@+id/img_settings"
            android:src="@drawable/settings"
            android:layout_toRightOf="@+id/img_contacts"
            style="@style/iconsMainActivity" />

        <TextView
            android:id="@+id/settings_textView"
            android:layout_below="@+id/img_settings"
            android:layout_toRightOf="@id/contacts_textView"
            android:text="@string/app_settings"
            style="@style/textIconsMainActivity"/>

        <ImageView
            android:id="@+id/img_profile"
            android:src="@drawable/profile"
            android:layout_below="@id/messages_textView"
            style="@style/iconsMainActivity" />

        <TextView
            android:id="@+id/profile_textView"
            android:text="@string/app_profile"
            android:layout_below="@id/img_profile"
            style="@style/textIconsMainActivity" />
    </RelativeLayout>

</LinearLayout>
